# TradingAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: PLAN.md
tests/: conftest.py  test_agent_chain.py  test_db.py  test_forecast.py  test_indicators.py  test_ingest.py  test_llm.py  test_report.py  test_tools.py
tradeagent/: cli.py  config.py
tradeagent/agent/: chain.py  deepseek_client.py  llm.py  prompts.py  tools.py
tradeagent/data/: db.py  features.py  ingest.py  models.py  queries.py  schemas.sql
tradeagent/forecast/: indicators.py  linear.py  signals.py
tradeagent/rag/: embedder.py  loader.py  retriever.py  vectorstore.py
tradeagent/viz/: charts.py  report.py
